Update dedication title and text in index.html

--- a/index.html
+++ b/index.html
@@ -432,8 +432,8 @@
 
         <!-- Dedication box -->
         <div class="dedication-box">
-            <div class="dedication-title">Para Mi Amor</div>
-            <div class="dedication-text">Con todo mi amor 💖</div>
+            <div class="dedication-title">Para Mi niña</div>
+            <div class="dedication-text">Con todo cariño 💖</div>
         </div>
 
         <!-- Instructions -->
