Actualizar game.html

--- a/game.html
+++ b/game.html
@@ -623,7 +623,7 @@
     <!-- Countdown Screen -->
     <div class="overlay" id="countdownScreen">
         <div class="modal">
-            <h2>¡Prepárate mi amor! 💖</h2>
+            <h2>¡Prepárate mi niña ! 💖</h2>
             <div class="countdown-number" id="countdownNumber">3</div>
         </div>
     </div>
@@ -644,8 +644,8 @@
 
         <!-- Dedication -->
         <div class="dedication-card">
-            <div class="dedication-title">Para Mi Amor</div>
-            <div class="dedication-text">Con todo mi amor 💖</div>
+            <div class="dedication-title">Para la niña</div>
+            <div class="dedication-text">Con todo mi cariño 💖</div>
         </div>
 
         <!-- Stats -->
@@ -729,7 +729,7 @@
         const phrases = [
             "Uy ❤️", "Diohh miohh 💕", "Que lindo 😍", "Uff 🔥", "xD <3 te quiero",
             "Niña 👸", "Preciosa ✨", "Ñeñeñe 🥰", "Tedible 💖", "Nouuu 😊",
-            "Que abuso 😘", "Eres mi sol ☀️", "Para ti mi amor 💝", "Mi razón 💗"
+            "Que abuso 😘", "Eres mi sol ☀️", "Para ti mi cariño 💝", "Mi razón 💗"
         ];
         
         // Card rewards
