Actualizar game.html

--- a/game.html
+++ b/game.html
@@ -614,7 +614,7 @@
         <div class="modal">
             <h2>¡CARTA DESBLOQUEADA! 💌</h2>
             <div class="reward-icon">💝</div>
-            <p style="font-size: clamp(16px, 4vw, 22px); font-weight: 700; color: #e91e63;">¡Nueva Carta de Amor!</p>
+            <p style="font-size: clamp(16px, 4vw, 22px); font-weight: 700; color: #e91e63;">¡Nueva Carta Diohh Miohh!</p>
             <p>Has desbloqueado una carta especial ❤️</p>
             <button class="btn" onclick="closeReward()">CONTINUAR</button>
         </div>
